test_suite/tests/ui/identifier/field_struct.stderr
error: #[serde(field_identifier)] can only be used on an enum
 --> $DIR/field_struct.rs:5:1
  |
5 | struct S;
  | ^^^^^^

error: aborting due to previous error

